--- a/src/Pages/Footer.css
+++ b/src/Pages/Footer.css
@@ -1,41 +1,423 @@
+@media screen and (max-width: 2000px) {
+.footer-container {
+background: #1e0253;
+padding: 4rem 0 4rem 0;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: auto;
+
+}
+
+.footer-subscription {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+
+margin-bottom: 24px;
+padding: 24px;
+color: #fff;
+}
+
+.footer-subscription > p {
+font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+"Lucida Sans", Arial, sans-serif;
+}
+
+.footer-subscription-heading {
+margin-bottom: 24px;
+font-size: 24px;
+}
+
+.footer-subscription-text {
+margin-bottom: 24px;
+font-size: 20px;
+}
+
+.footer-input {
+padding: 8px 20px;
+border-radius: 2px;
+margin-right: 10px;
+outline: none;
+border: none;
+font-size: 18px;
+margin-bottom: 16px;
+border: 1px solid #fff;
+}
+
+.footer-links {
+max-width: 1000px;
+display: flex;
+justify-content: center;
+line-height: 2.5;
+}
+
+.footer-link-wrapper {
+display: flex;
+width: auto;
+}
+
+.footer-link-items {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+margin: 16px;
+text-align: left;
+width: 300px;
+box-sizing: border-box;
+margin: auto;
+}
+
+.footer-link-items > h2 {
+color: #dd9f0d;
+
+}
+
+.footer-link-items a {
+color: #fff;
+text-decoration: none;
+margin-bottom: 0.5rem;
+}
+
+.footer-link-items a:hover {
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 15px;
+}
+
+.footer-input::placeholder {
+color: #b1b1b1;
+}
+.social-media {
+max-width: 1000px;
+width: 100%;
+}
+
+/* Social Icons */
+.social-icon-link {
+color: #fff;
+font-size: 40px;
+padding-right: 90px;
+padding-left: 90px;
+}
+
+.social-media-wrap {
+justify-content: space-between;
+text-align: center;
+margin-top: 100px;
+}
+.website-rights {
+color: #fff;
+text-align: center;
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 15px;
+}
+.website-rights:hover {
+  font-size: 20px;
+  cursor: pointer;
+}
+}
+
+@media screen and (max-width: 1600px) {
+.footer-container {
+background: #1e0253;
+padding: 0em 0 2rem 0;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: auto;
+
+}
+
+.footer-subscription {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+
+margin-bottom: 5px;
+padding: 5px;
+color: #fff;
+}
+
+.footer-subscription > p {
+font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+"Lucida Sans", Arial, sans-serif;
+}
+
+.footer-subscription-heading {
+margin-bottom: 5px;
+font-size: 24px;
+}
+
+.footer-subscription-text {
+margin-bottom: 5px;
+font-size: 20px;
+}
+
+.footer-input {
+padding: 8px 20px;
+border-radius: 2px;
+margin-right: 10px;
+outline: none;
+border: none;
+font-size: 18px;
+margin-bottom: 10px;
+border: 1px solid #fff;
+}
+
+.footer-links {
+max-width: 1000px;
+display: flex;
+justify-content: center;
+line-height: 1.5;
+}
+
+.footer-link-wrapper {
+display: flex;
+width: 800px;
+}
+
+.footer-link-items {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+margin: 16px;
+text-align: left;
+width: 200px;
+box-sizing: border-box;
+margin: auto;
+}
+
+.footer-link-items > h2 {
+padding-top: 100px;
+color: #dd9f0d;
+font-size: 15px;
+}
+
+.footer-link-items a {
+color: #fff;
+text-decoration: none;
+margin-bottom: 0.3rem;
+font-size: 17px;
+width: auto;
+}
+
+.footer-link-items a:hover {
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 12px;
+}
+
+.footer-input::placeholder {
+color: #b1b1b1;
+}
+.social-media {
+max-width: 1000px;
+width: 100%;
+}
+
+/* Social Icons */
+.social-icon-link {
+color: #fff;
+font-size: 40px;
+padding-right: 90px;
+padding-left: 90px;
+}
+
+.social-media-wrap {
+justify-content: space-between;
+text-align: center;
+margin-top: 100px;
+}
+.website-rights {
+color: #fff;
+text-align: center;
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 15px;
+}
+.website-rights:hover {
+  font-size: 20px;
+  cursor: pointer;
+}
+}
+
+@media screen and (max-width: 1024px) {
+.footer-container {
+background: #1e0253;
+padding: 4rem 0 4rem 0;
+padding-left: 50px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: auto;
+
+}
+
+.footer-subscription {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+
+margin-bottom: 24px;
+padding: 24px;
+color: #fff;
+}
+
+.footer-subscription > p {
+font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+"Lucida Sans", Arial, sans-serif;
+}
+
+.footer-subscription-heading {
+margin-bottom: 24px;
+font-size: 24px;
+}
+
+.footer-subscription-text {
+margin-bottom: 24px;
+font-size: 20px;
+}
+
+.footer-input {
+padding: 8px 20px;
+border-radius: 2px;
+margin-right: 10px;
+outline: none;
+border: none;
+font-size: 18px;
+margin-bottom: 16px;
+border: 1px solid #fff;
+}
+
+.footer-links {
+max-width: 1000px;
+display: flex;
+justify-content: center;
+line-height: 2.5;
+
+}
+
+.footer-link-wrapper {
+display: flex;
+width: auto;
+}
+
+.footer-link-items {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+margin: 16px;
+text-align: left;
+width: 190px;
+box-sizing: border-box;
+margin: auto;
+}
+
+.footer-link-items > h2 {
+  padding-top: 0px;
+  color: #dd9f0d;
+  font-size: 25px;
+  }
+  
+  .footer-link-items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.3rem;
+  font-size: 17px;
+  width: auto;
+  }
+  
+  .footer-link-items a:hover {
+  color: #dd9f0d;
+  transition: 0.3s ease-out;
+  font-size: 15px;
+  }
+  
+  .footer-input::placeholder {
+  color: #b1b1b1;
+  }
+  .social-media {
+  max-width: 1000px;
+  width: 100%;
+  }
+  
+  /* Social Icons */
+  .social-icon-link {
+  color: #fff;
+  font-size: 40px;
+  padding-right: 90px;
+  padding-left: 90px;
+  }
+  
+  .social-media-wrap {
+  justify-content: space-between;
+  text-align: center;
+  margin-top: 100px;
+  }
+  .website-rights {
+  color: #fff;
+  text-align: center;
+  color: #dd9f0d;
+  transition: 0.3s ease-out;
+  font-size: 20px;
+  }
+  .website-rights:hover {
+    font-size: 20px;
+    cursor: pointer;
+  }
+  }  
+
+@media screen and (max-width: 634px) {
 .footer-container {
   background: #1e0253;
-  padding: 4rem 0 2rem 0;
+  padding: 2em 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: auto;
   
-}
-
-.footer-subscription {
+  }
+  
+  .footer-subscription {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-
+  
   margin-bottom: 24px;
   padding: 24px;
   color: #fff;
-}
-
-.footer-subscription > p {
+  }
+  
+  .footer-subscription > p {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-}
-
-.footer-subscription-heading {
+  "Lucida Sans", Arial, sans-serif;
+  }
+  
+  .footer-subscription-heading {
   margin-bottom: 24px;
   font-size: 24px;
-}
-
-.footer-subscription-text {
+  }
+  
+  .footer-subscription-text {
   margin-bottom: 24px;
   font-size: 20px;
-}
-
-.footer-input {
+  }
+  
+  .footer-input {
   padding: 8px 20px;
   border-radius: 2px;
   margin-right: 10px;
@@ -44,133 +426,264 @@
   font-size: 18px;
   margin-bottom: 16px;
   border: 1px solid #fff;
-}
-
-.footer-links {
-  width: 100%;
+  }
+  
+  .footer-links {
   max-width: 1000px;
   display: flex;
   justify-content: center;
-}
-
-.footer-link-wrapper {
+  line-height: 1.5;
+  
+  }
+  
+  .footer-link-wrapper {
   display: flex;
-}
-
-.footer-link-items {
+  width: auto;
+  }
+  
+  .footer-link-items {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 16px;
+  margin: 13px;
   text-align: left;
-  width: 160px;
-  box-sizing: border-box;
-  margin: auto;
-}
-
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
-  color: #fff;
-  margin-left: 10px;
+  width: 300px;
+  box-sizing: border-box;        
+  }
   
-}
-
-.footer-link-items a {
+  .footer-link-items > h2 {
+  color: #fff;
+  
+  }
+  
+  .footer-link-items a {
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
-  margin-left: 10px;
-}
-
-.footer-link-items a:hover {
-  color: #e9e9e9;
+  }
+  
+  .footer-link-items a:hover {
+  color: #dd9f0d;
   transition: 0.3s ease-out;
-}
-
-.footer-email-form h2 {
-  margin-bottom: 2rem;
-}
-
-.footer-input::placeholder {
+  font-size: 15px;
+  }
+  
+  .footer-input::placeholder {
   color: #b1b1b1;
-}
-
-/* Social Icons */
-.social-icon-link {
+  }
+  .social-media {
+    max-width: 1000px;
+    width: 100%;
+  }
+  
+  /* Social Icons */
+  .social-icon-link {
   color: #fff;
-  font-size: 24px;
-  padding-right: 100px;
-}
-
-.social-media {
-  max-width: 1000px;
-  width: 100%;
-}
-
-.social-media-wrap {
+  font-size: 40px;
+  padding-right: 90px;
+  padding-left: 90px;
+  }
+  
+  .social-media-wrap {
   justify-content: space-between;
   text-align: center;
-  margin: 40px auto 0 auto;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 240px;
-}
-
-.social-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 1.4rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.website-rights {
+  margin-top: 100px;
+  font-size: 30px;
+  }
+  .website-rights {
   color: #fff;
   text-align: center;
-  width: 100%;
-
-}
+  color: #dd9f0d;
+  transition: 0.3s ease-out;
+  font-size: 20px;
+  }
+  .website-rights:hover {
+    font-size: 20px;
+    cursor: pointer;
+  }
+  }
 
 
 @media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
-  }
 
-  .footer-input {
-    width: 100%;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
-  .footer-link-wrapper {
-    flex-direction: column;
-  }
-
-  .social-media-wrap {
-    flex-direction: column;
-  }
+.footer-input {
+width: 100%;
 }
 
-@media screen and (max-width: 400px) {
-  .website-rights {
-    color: #fff;
-    margin-bottom: 16px;
-    margin-left: 200px;
-    width: 100%;
-    text-align: center;
+.btn {
+width: 100%;
+}
+
+.footer-link-wrapper {
+flex-direction: column;
+}
+
+.social-media-wrap {
+flex-direction: column;
+}
+.website-rights:hover {
+  font-size: 20px;
+  cursor: pointer;
+}
+}
+@media screen and (max-width: 634px) {
+.footer-container {
+background: #1e0253;
+padding: 0em 0 2rem 0;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: auto;
+
+}
+
+.footer-subscription {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+margin-bottom: 24px;
+color: #fff;
+}
+
+.footer-subscription > p {
+font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+"Lucida Sans", Arial, sans-serif;
+}
+
+.footer-subscription-heading {
+margin-bottom: 24px;
+font-size: 24px;
+}
+
+.footer-subscription-text {
+margin-bottom: 24px;
+font-size: 20px;
+}
+
+.footer-input {
+padding: 8px 20px;
+border-radius: 2px;
+margin-right: 10px;
+outline: none;
+border: none;
+font-size: 18px;
+margin-bottom: 16px;
+border: 1px solid #fff;
+}
+
+.footer-links {
+max-width: 900px;
+display: flex;
+justify-content: center;
+line-height: 1.5;
+
+}
+
+.footer-link-wrapper {
+display: flex;
+width: auto;
+margin-left: 70px;
+}
+
+.footer-link-items {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+text-align: left;
+margin-left: auto;
+width: 200px;
+box-sizing: border-box;   
+}
+
+.footer-link-items > h2 {
+  padding-top: 20px;
+  color: #dd9f0d;
+  font-size: 25px;
   }
+  
+  .footer-link-items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.3rem;
+  font-size: 20px;
+  width: auto;
+  }
+  
+  .footer-link-items a:hover {
+  color: #dd9f0d;
+  transition: 0.3s ease-out;
+  font-size: 12px;
+  }
+  
+  .footer-input::placeholder {
+  color: #b1b1b1;
+  }
+  .social-media {
+  max-width: 1000px;
+  width: 100%;
+  }
+  
+  /* Social Icons */
+  .social-icon-link {
+  color: #fff;
+  font-size: 40px;
+  padding-right: 90px;
+  padding-left: 90px;
+  }
+  
+  .social-media-wrap {
+  justify-content: space-between;
+  text-align: center;
+  margin-top: 100px;
+  }
+  .website-rights {
+  color: #fff;
+  text-align: center;
+  color: #dd9f0d;
+  transition: 0.3s ease-out;
+  font-size: 20px;
+  }
+  .website-rights:hover {
+    font-size: 25px;
+    cursor: pointer;
+  }
+  }
+  
+
+@media screen and (max-width: 400px) {
+.website-rights {
+color: #fff;
+margin-bottom: 16px;
+width: 100%;
+text-align: center;
+margin-top: 20px;
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 20px;
+}
+.website-rights:hover {
+  font-size: 25px;
+  cursor: pointer;
+}
+.footer-link-items a {
+color: #fff;
+text-decoration: none;
+margin-bottom: 0.5rem;
+}
+
+.footer-link-items a:hover {
+color: #dd9f0d;
+transition: 0.3s ease-out;
+font-size: 15px;
+}
+
+.footer-input::placeholder {
+color: #b1b1b1;
+}
+.footer-link-wrapper {
+display: flex;
+}
 }
