--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -66,15 +66,50 @@
 }
 
 
-@media screen and (max-width: 600px){
+/*Meidle Screen*/
+@media screen and (max-width: 812px) {
   .main {
     width: 100%;
-    height: 800px !important;
+    height: 400px !important;
+    background: #dd9f0d;
+  }
+  .logoTalkToBee {
+    width: 50%;
+    height: 400px !important;
+  }
+  .TextWelcome {
+    text-align: center;
+    margin-left: 50%;
+    font-size: 25px;
+    padding-top: 60px;
+  }
+  .middleText {
+    text-align: center;
+    margin-top: 30px;
+    padding-left: auto;
+    margin-right: 20px;
+    font-size: 15px;
+  }
+  .finalText {
+    text-align: center;
+    margin-top: 30px;
+    padding-left: 52%;
+    margin-right: 20px;
+    font-size: 25px;
+  }
+}
+
+
+
+@media screen and (max-width: 540px) {
+  .main {
+    width: 100%;
+    height: 600px !important;
     background: #dd9f0d;
   }
   .logoTalkToBee {
     width: 100%;
-    height: 400px !important;
+    height: 600px !important;
   }
   .TextWelcome {
     margin-left: 10px;
@@ -97,5 +132,80 @@
     margin-right: 20px;
     font-size: 25px;
     font-weight: bold;
+  }
+}
+
+
+@media screen and (max-width: 634px) {
+  .main {
+    width: 100%;
+    height: 1000px !important;
+    background: #dd9f0d;
+  }
+  .logoTalkToBee {
+    width: 100%;
+    height: 600px !important;
+  }
+  .TextWelcome {
+    margin-left: auto;
+    text-align: center;
+    margin-top: 0px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .middleText {
+    text-align: center;
+    margin-top: 30px;
+    padding-left: 25px;
+    margin-right: 50px;
+    font-size: 20px;
+  }
+  .finalText {
+    text-align: center;
+    margin-top: 40px;
+    padding-left: 5px;
+    margin-right: 20px;
+    font-size: 25px;
+    font-weight: bold;
+  }
+}
+
+/*Iphone X*/
+@media screen and (max-width: 375px) {
+  .main {
+    width: 100%;
+    height: 850px !important;
+    background: #dd9f0d;
+  }
+  .logoTalkToBee {
+    width: 100%;
+    height: 400px !important;
+  }
+  .TextWelcome {
+    margin-left: 10px;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .middleText {
+    text-align: center;
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-right: 10px;
+    font-size: 20px;
+  }
+  .finalText {
+    text-align: center;
+    margin-top: 40px;
+    padding-left: 10px;
+    margin-right: 10px;
+    font-size: 25px;
+    font-weight: bold;
+  }
+  .headerLine{
+    width: auto;
+    height: 200px !important;
+    background-color: #1e0253;
   }
 }
