--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -4,11 +4,11 @@
   .navbar {
     background: #1e0253;
     height: 80px;
-    width: 100%;
+    width: auto;
     display: flex;
+    text-align: right;
     justify-content: center;
-    align-items: left;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     position: sticky;
     top: 0;
     z-index: 999;
@@ -41,13 +41,12 @@
 
   .nav-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-gap: 50px;
+    grid-template-columns: repeat(6, auto);
+    grid-gap: 0px;
     list-style: none;
-    text-align: left;
+    text-align: right;
     width: 90vw;
     justify-content: end;
-    margin-right: 2rem;
   }
 
   .nav-menu.active {
@@ -77,6 +76,7 @@
     border-bottom: 4px solid #fff;
     transition: all 0.2s ease-out;
     padding-top: 30px;
+    color: #dd9f0d;
   }
 
   .fa-bars {
