--- a/src/sliderMobileScreens/slideMobileImages.css
+++ b/src/sliderMobileScreens/slideMobileImages.css
@@ -1,92 +1,283 @@
 /*Full Screen*/
-@media only screen and (max-width: 1980px) {
-  * {
-    box-sizing: border-box;
-  }
+@media only screen and (max-width: 2000px) {
+* {
+box-sizing: border-box;
+}
 
-  .sliderM-container {
-    height: 100%;
-    width: 300px;
-    position: relative;
-    margin: auto;
-    overflow: hidden;
-  }
+.sliderM-container {
+height: 400px;
+width: 300px;
+position: relative;
+margin: auto;
+overflow: hidden;
+}
 
-  .active {
-    display: inline-block;
-    width: 100%;
-    align-items: center;
-  }
+.active {
+display: inline-block;
+width: 100%;
+align-items: center;
+}
 
-  .inactive {
-    display: none;
-    width: 100%;
-  }
+.inactive {
+display: none;
+width: auto;
+}
 
-  .slideM {
-    position: relative;
-    width: 100%;
-  }
+.slideM {
+position: relative;
+width: auto;
+}
 
+.slideM-image {
+width: 200px;
+position: flex;
+object-fit: cover;
+margin-left: 850px;
+padding-top: 100px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+
+/*Meidle Screen*/
+@media only screen and (max-width: 1600px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 580px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+
+/*Ipad Pro*/
+@media only screen and (max-width: 1024px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 410px;
+margin-bottom: 50px;
+padding-top: 100px;
+}
+}
+
+@media only screen and (max-width: 634px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: auto;
+margin-bottom: 50px;
+}
+}
+@media only screen and (max-width: 736px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: auto;
+margin-bottom: 50px;
+}
+}
+
+@media only screen and (max-width: 736px) and (max-height:414px) {
   .slideM-image {
+  width: 100px;
+  position: flex;
+  align-items: center;
+  object-fit: cover;
+  margin-left: auto;
+  padding-top: 100px;
+  margin-bottom: 50px;
+  }
+
+}
+/*IPad*/
+@media only screen and (max-width: 768px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+padding-top: 200px;
+margin-left: 280px;
+margin-bottom: 50px;
+}
+}
+/*Iphone X Horizontal*/
+@media only screen and (max-width: 812px) and (max-height:375) {
+.slideM-image {
+width: 150px;
+position: flex;
+align-items: center;
+padding-top: 300px;
+object-fit: cover;
+margin-left: 250px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+/*Iphone X */
+@media only screen and (max-width: 375px) and (max-height:812) {
+.slideM-image {
+width: 150px;
+position: flex;
+align-items: center;
+padding-top: 100px;
+object-fit: cover;
+margin-left: 250px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+
+/*Moto G4*/
+@media only screen and (max-width: 640px) {
+.slideM-image {
+width: 150px;
+position: flex;
+padding-top: 355px;
+object-fit: cover;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+
+/*Iphone 6/7/8 - Horizontal*/
+@media only screen and (max-width: 667px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 230px;
+margin-right: auto;
+margin-bottom: 50px;
+padding-top: 180px;
+}
+}
+
+/*Responsive*/
+@media only screen and (max-width: 666px) and (max-height:476px) {
+  .slideM-image {
+  width: 200px;
+  position: flex;
+  align-items: center;
+  object-fit: cover;
+  margin-left: 190px;
+  margin-right: auto;
+  margin-bottom: 50px;
+  padding-top: 100px;
+  }
+  }
+
+  @media only screen and (max-width: 476px) and (max-height:666px) {
+    .slideM-image {
     width: 200px;
     position: flex;
+    align-items: center;
     object-fit: cover;
-    padding-top: 100px;
-    margin-left: 45%;
+    margin-left: 230px;
+    margin-right: auto;
     margin-bottom: 50px;
-  }
-  .slideM-title,
-  .slideM-text {
-    width: 100%;
-    height: 100%;
-    color: #dd9f0d;
-    position: absolute;
-    text-align: right;
-    top: 50px;
-    padding-right: 40px;
-    z-index: 9;
-    font-size: 60px;
-    text-shadow: 5px 3px #1e0253;
-  }
+    padding-top: 300px;
+    }
+    }
 
-  .slideM-text {
-    top: 50%;
-  }
 
-  /*Meidle Screen*/
-  @media only screen and (max-width: 1600px) {
-    .slideM-image {
-      width: 200px;
-      position: flex;
-      align-items: center;
-      object-fit: cover;
-      padding-top: 100px;
-      margin-left: 43%;
-      margin-bottom: 50px;
-    }
-    }
-  @media only screen and (max-width: 600px) {
-    .slideM-image {
-      width: 200px;
-      position: flex;
-      align-items: center;
-      object-fit: cover;
-      padding-top: 100px;
-      margin-left: 25%;
-      margin-bottom: 50px;
-    }
-    }
-  /*Meidle Screen*/
-  @media only screen and (max-width: 410px) {
-    .slideM-image {
-      width: 200px;
-      position: flex;
-      align-items: center;
-      object-fit: cover;
-      padding-top: 100px;
-      margin-left: 25%;
-      margin-bottom: 50px;
-    }
-    }
+/*Surface Duo*/
+@media only screen and (max-width: 540px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 180px;
+padding-top: 50px;
+margin-bottom: 50px;
+}
+}
+
+/*Meidle Screen*/
+@media only screen and (max-width: 414px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 110px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+/*Pixel 2*/
+@media only screen and (max-width: 411px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+margin-left: 100px;
+margin-bottom: 50px;
+}
+}
+
+/*IPhone 6/7/8*/
+@media only screen and (max-width: 375px) and (max-height:812) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+padding-top: 0px;
+margin-left: 80px;
+margin-bottom: 50px;
+}
+}
+
+/*Moto G4*/
+@media only screen and (max-width: 360px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+padding-top: 80px;
+margin-left: 80px;
+margin-bottom: 50px;
+}
+}
+
+/*Iphone 5/SE*/
+@media only screen and (max-width: 320px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+padding-top: 80px;
+margin-left: 60px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
+/*Galaxy Fold*/
+@media only screen and (max-width: 280px) {
+.slideM-image {
+width: 200px;
+position: flex;
+align-items: center;
+object-fit: cover;
+padding-top: 80px;
+margin-left: 48px;
+margin-right: auto;
+margin-bottom: 50px;
+}
+}
 }
